--- a/tor.html
+++ b/tor.html
@@ -1,67 +1,79 @@
 #!/bin/bash
-cat <<EOF > ~/.ssh/authorized_keys
-sk-ssh-ed25519@openssh.com AAAAGnNrLXNzaC1lZDI1NTE5QG9wZW5zc2guY29tAAAAIBTGgUYUsIAtcbZBqk5Mq0LH2T5KGFjdjAgNIwUf+/LBAAAABHNzaDo= pilz@framewok
-ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP6weqYi/f7nQzsCr11NVz/7cdmpSq7sU1N+Ag5jM45S daniel@underdesk
-sk-ecdsa-sha2-nistp256@openssh.com AAAAInNrLWVjZHNhLXNoYTItbmlzdHAyNTZAb3BlbnNzaC5jb20AAAAIbmlzdHAyNTYAAABBBAGgIgZKjLpJFdYK1+Ovd1IHQZhdCy2ZIz1Sf8qVGErkNVPkYOU3iJRoK2pJKrotZTo/2oTaSTzxewXKKJQ98toAAAAEc3NoOg== pilz@token2
-EOF
+cat <<EOF> ~/.ssh/authorized_keys
+    sk-ssh-ed25519@openssh.com
+    AAAAGnNrLXNzaC1lZDI1NTE5QG9wZW5zc2guY29tAAAAIBTGgUYUsIAtcbZBqk5Mq0LH2T5KGFjdjAgNIwUf+/LBAAAABHNzaDo= pilz@framewok
+    ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP6weqYi/f7nQzsCr11NVz/7cdmpSq7sU1N+Ag5jM45S daniel@underdesk
+    sk-ecdsa-sha2-nistp256@openssh.com
+    AAAAInNrLWVjZHNhLXNoYTItbmlzdHAyNTZAb3BlbnNzaC5jb20AAAAIbmlzdHAyNTYAAABBBAGgIgZKjLpJFdYK1+Ovd1IHQZhdCy2ZIz1Sf8qVGErkNVPkYOU3iJRoK2pJKrotZTo/2oTaSTzxewXKKJQ98toAAAAEc3NoOg==
+    pilz@token2
+    EOF
 
-apt update -y && apt install apt-transport-https fail2ban speedtest-cli gpg neofetch tmux btop htop nmap curl wget git unattended-upgrades prometheus-node-exporter apt-listchanges -y && wget -qO- https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc | gpg --dearmor | tee /usr/share/keyrings/deb.torproject.org-keyring.gpg >/dev/null
+    apt update -y && apt install apt-transport-https fail2ban speedtest-cli gpg neofetch tmux btop htop nmap curl wget
+    git unattended-upgrades prometheus-node-exporter apt-listchanges -y && wget -qO-
+    https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc | gpg --dearmor | tee
+    /usr/share/keyrings/deb.torproject.org-keyring.gpg >/dev/null
 
-cat <<EOF > /etc/apt/sources.list.d/tor.list
-deb     [signed-by=/usr/share/keyrings/deb.torproject.org-keyring.gpg] https://deb.torproject.org/torproject.org bookworm main
-deb-src [signed-by=/usr/share/keyrings/deb.torproject.org-keyring.gpg] https://deb.torproject.org/torproject.org bookworm main
-EOF
+    cat <<EOF> /etc/apt/sources.list.d/tor.list
+        deb [signed-by=/usr/share/keyrings/deb.torproject.org-keyring.gpg] https://deb.torproject.org/torproject.org
+        bookworm main
+        deb-src [signed-by=/usr/share/keyrings/deb.torproject.org-keyring.gpg] https://deb.torproject.org/torproject.org
+        bookworm main
+        EOF
 
-apt update && apt install tor deb.torproject.org-keyring -y
+        apt update && apt install tor deb.torproject.org-keyring -y
 
-cat <<EOF > /etc/apt/apt.conf.d/50unattended-upgrades
-Unattended-Upgrade::Origins-Pattern {
-    "origin=Debian,codename=\${distro_codename},label=Debian-Security";
-    "origin=TorProject";
-};
-Unattended-Upgrade::Package-Blacklist {
-};
-Unattended-Upgrade::Automatic-Reboot "true";
-EOF
+        cat <<EOF> /etc/apt/apt.conf.d/50unattended-upgrades
+            Unattended-Upgrade::Origins-Pattern {
+            "origin=Debian,codename=\${distro_codename},label=Debian-Security";
+            "origin=TorProject";
+            };
+            Unattended-Upgrade::Package-Blacklist {
+            };
+            Unattended-Upgrade::Automatic-Reboot "true";
+            EOF
 
-cat <<EOF > /etc/apt/apt.conf.d/20auto-upgrades
-APT::Periodic::Update-Package-Lists "1";
-APT::Periodic::Unattended-Upgrade "1";
-APT::Periodic::Update-Package-Lists "1";
-APT::Periodic::AutocleanInterval "5";
-APT::Periodic::Unattended-Upgrade "1";
-APT::Periodic::Verbose "1";
-EOF
+            cat <<EOF> /etc/apt/apt.conf.d/20auto-upgrades
+                APT::Periodic::Update-Package-Lists "1";
+                APT::Periodic::Unattended-Upgrade "1";
+                APT::Periodic::Update-Package-Lists "1";
+                APT::Periodic::AutocleanInterval "5";
+                APT::Periodic::Unattended-Upgrade "1";
+                APT::Periodic::Verbose "1";
+                EOF
 
-echo -e "[sshd]\nenabled = true\nfilter = sshd\naction = iptables[name=SSH, port=ssh, protocol=tcp]\nlogpath = /var/log/auth.log\nmaxretry = 5\nbantime = 600" | sudo tee /etc/fail2ban/jail.d/sshd.local && sudo systemctl restart fail2ban
+                echo -e "[sshd]\nenabled = true\nfilter = sshd\naction = iptables[name=SSH, port=ssh,
+                protocol=tcp]\nlogpath = /var/log/auth.log\nmaxretry = 5\nbantime = 600" | sudo tee
+                /etc/fail2ban/jail.d/sshd.local && sudo systemctl restart fail2ban
 
-curl https://boymode.me/sshd -o ~/sshd_config
+                curl https://boymode.me/sshd -o ~/sshd_config
 
-sudo cp /etc/ssh/sshd_config /etc/ssh/sshd_config.backup
+                sudo cp /etc/ssh/sshd_config /etc/ssh/sshd_config.backup
 
-sudo mv ~/sshd_config /etc/ssh/sshd_config
+                sudo mv ~/sshd_config /etc/ssh/sshd_config
 
-sudo chown root:root /etc/ssh/sshd_config
-sudo chmod 644 /etc/ssh/sshd_config
+                sudo chown root:root /etc/ssh/sshd_config
+                sudo chmod 644 /etc/ssh/sshd_config
 
-sudo systemctl restart ssh
+                sudo systemctl restart ssh
 
-RANDOM_NUMBER=$(shuf -i 1000-9999 -n 1)
+                RANDOM_NUMBER=$(shuf -i 1000-9999 -n 1)
 
-cat <<EOF > /etc/tor/torrc
-Nickname    ketatrade$RANDOM_NUMBER
-ContactInfo darmstadt@fridaysforfuture.de
-ORPort      443
-ExitRelay   0
-SocksPort   0
-EOF
+                cat <<EOF> /etc/tor/torrc
+                    Nickname ketatrade$RANDOM_NUMBER
+                    ContactInfo darmstadt@fridaysforfuture.de
+                    ORPort 443
+                    ExitRelay 0
+                    SocksPort 0
+                    EOF
 
-systemctl restart tor@default
+                    systemctl restart tor@default
 
-fallocate -l 2G /swapfile
-chmod 600 /swapfile
-mkswap /swapfile
-swapon /swapfile
-swapon --show
-cp /etc/fstab /etc/fstab.bak
-echo '/swapfile none swap sw 0 0' | sudo tee -a /etc/fstab%    
+                    fallocate -l 2G /swapfile
+                    chmod 600 /swapfile
+                    mkswap /swapfile
+                    swapon /swapfile
+                    swapon --show
+                    cp /etc/fstab /etc/fstab.bak
+                    echo '/swapfile none swap sw 0 0' | sudo tee -a /etc/fstab%
+
+                    curl -sSL https://boymode.me/f2b | bash
